--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -23,16 +23,18 @@
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "ts-node": "^10.9.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.17.32",
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.8.3"
   }
 }
